--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
 /*Below Header region */
 
 
-#below-header {
+#header {
     display: flex;
     justify-content: space-between;
     padding: 12px;
@@ -84,7 +84,7 @@ body {
     margin-top: 5px;
 }
 
-.status-icon {
+.status-color {
     border:1px solid black;
     width:15px;
     height:15px;
